<resources>
    <!--    MainActivity -->
    <string name="app_name">Moon Phase</string>
    <string name="progress_date">%s\n%d%%, %s</string>
    <string name="title">Today</string>
    <string name="empty" />
    <string name="mock_date">2012–12–12</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_title">Settings</string>
    <string name="south_hemisphere_title">South hemisphere</string>
    <string name="messages_header">Algorithm</string>
    <string name="algorithm_title">Phase algorithm</string>
    <string name="phases">Phases</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
</resources>
