<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/rightImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="124dp"
        android:contentDescription="@string/empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/leftImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="124dp"
        android:contentDescription="@string/empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/leftDateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mock_date"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/leftImageView"
        app:layout_constraintEnd_toStartOf="@+id/todayView"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rightDateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_date"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/rightImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toEndOf="@+id/todayView" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todayView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/progress_date"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="@dimen/progress_moon_diameter"
        android:layout_height="@dimen/progress_moon_diameter"
        android:layout_marginTop="8dp"
        android:progress="0"
        android:progressDrawable="@drawable/progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        app:layout_constraintVertical_bias="0.731" />

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:padding="8dp"
        android:text="@string/calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftImageView" />

    <ImageView
        android:id="@+id/moonImageView"
        android:layout_width="@dimen/moon_diameter"
        android:layout_height="@dimen/moon_diameter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        app:srcCompat="@drawable/full_moon" />

</androidx.constraintlayout.widget.ConstraintLayout>